--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -130,6 +130,7 @@ footer{
 }
 
 .footer-izquierda{
+    color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -137,8 +138,17 @@ footer{
     align-items: center;
 }
 
+.footer-p{
+    margin: 10px 0;
+}
+
+.socialmedia i{
+    margin: 0 10px;
+    width: 10px;
+}
+
 .footer-derecha{
-    flex-basis: 20%;
+    flex-basis: 30%;
 }
 
 .footer-derecha form{
@@ -148,15 +158,65 @@ footer{
 }
 
 .footer-derecha form input, textarea{
+    color: white;
     border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    background: transparent;
     outline: none;
     padding: 5px;
+}
+
+.footer-derecha input[type="submit"]{
+    color: #333;
+    cursor: pointer;
+    transition: .5s ease;
+}
+
+.footer-derecha input[type="submit"]:hover{
+    color: white;
+    animation-name: borderBotom;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .form-element{
     margin: 5px 0;
 }
 
+/* About */
+.about{
+    width: 100%;
+    height: 100vh;
+    padding: 25px 25px;
+    background-color: whitesmoke;
+    display: grid;
+    grid-template-columns: 1fr 1.2fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.about-izquierda img{
+    max-width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.about-derecha{
+    max-width: 90%;
+    padding-right: 20px;
+}
+
+.about-derecha_me span, h2, p{
+    margin: 5px 0;
+    padding: 5px 0;
+}
+
+.subtitle-about{
+    font-weight: bold;
+    color: var(--orange);
+}
 
 /* Animaciones */
 @keyframes down{
@@ -165,5 +225,17 @@ footer{
     }
     to {
         transform: translateY(0%);
+    }
+}
+
+@keyframes borderBotom {
+    33%{
+        border-right: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    66%{
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    100%{
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
     }
 }
