--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,103 @@ footer{
     color: var(--orange);
 }
 
+/* My Skills */
+
+.skills{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.skills-izquierda{
+    display: flex;
+    justify-content: center;
+}
+
+.skills-izquierda__info{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    color: white;
+}
+
+.skill-rate{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 8px 0;
+}
+
+.skill-rate_title{
+    width: 70px;
+}
+
+.rate{
+    margin: 0 5px;
+    border-radius: 15px;
+}
+
+.bg100{
+    width: 90%;
+    background-color: orange;
+}
+
+.bg90{
+    width: 80%;
+    background-color: blue;
+}
+
+.bg80{
+    width: 65%;
+    background-color: yellow;
+}
+
+.bg85{
+    width: 75%;
+    background-color: purple;
+}
+
+.naranja{
+    background-color: orange;
+}
+
+.t100{
+    display: block;
+    /* z-index: -1; */
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 5px;
+    border-radius: 15px;
+}
+
+.skills-derecha{
+    width: 300px;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 15px;
+    justify-items: center;
+    align-items: center;
+}
+
+.target{
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.target img{
+    max-width: 100px;
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    object-position: center;
+}
+
 /* Animaciones */
 @keyframes down{
     from {
