--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ footer{
 .skills{
     width: 100%;
     height: 100vh;
+    background-color: whitesmoke;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
@@ -238,7 +239,7 @@ footer{
     display: flex;
     flex-direction: column;
     width: 80%;
-    color: white;
+    color: black;
 }
 
 .skill-rate{
@@ -253,12 +254,14 @@ footer{
 
 .rate{
     margin: 0 5px;
-    border-radius: 15px;
+    /* border-radius: 20px 0 15px 0; */
+    clip-path: polygon(2.5% 0, 100% 0, 97.5% 100%, 0 100%);
 }
 
 .bg100{
     width: 90%;
     background-color: orange;
+    box-shadow: 1px 1px orange;
 }
 
 .bg90{
