--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,96 @@ ul li a:hover{
 .social-media a i:hover{
     color: var(--green);
 }
+
+/* About */
+
+.about{
+    width: 100%;
+    height: 100vh;
+    background-color: #0f1013;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: var(--white);
+    align-items: center;
+}
+
+.about-izquierda{
+    /* padding-left: 20%; */
+    height: 90%;
+}
+
+.about-info{
+    padding-top:0px;
+    width: 500px;
+    position: relative;
+    left: 25%;
+    transform: translateX(-25%);
+}
+
+.about-info__box{
+    
+}
+
+
+.about-title{
+    font-size: 3rem;
+    text-transform: uppercase;
+    line-height: .5;
+}
+
+.line-green::before{
+    content: " ";
+    display: inline-block;
+    width: 40%;
+    height: 2px;
+    background: var(--green);
+}
+
+.about-email{
+    margin: 10px 0;
+}
+
+/* querys */
+@media (max-width: 700px) {
+    body{
+        overflow-x: hidden;
+    }
+    .home{
+        grid-template-columns: 1fr;
+    }
+    .home-info{
+        max-width: 90%;
+        margin: 0 auto;
+        padding: 15px;
+        position: none;
+        left: 0;
+        transform: translate(0);
+    }
+    .home-none{
+        display: none;
+    }
+    .home-title{
+        line-height: 1.2;
+        font-size: 2.5rem;
+        margin-bottom: 15px;
+    }
+    .home-title span{
+        font-size: 4rem;
+    }
+    .home-description{
+        font-size: 1.5rem;
+        letter-spacing: .5rem;
+    }
+    .social-media{
+        left: 50%;
+        transform: translate(-50%);
+    }
+    .home-button-space{
+        flex-wrap: wrap;
+    }
+    .home-button{
+        padding: 12px 40px;
+        margin: 5px;
+        flex-grow: 1;
+    }
+}
